Don't truncate "Saved password" in the generation dropdown.

Bug: 887936
Change-Id: I0d26f044019b6a73f4fcec7f5b6a88d707cc7c15
Reviewed-on: https://chromium-review.googlesource.com/c/1268115
Reviewed-by: Dominic Battré <battre@chromium.org>
Commit-Queue: Vasilii Sukhanov <vasilii@chromium.org>
Cr-Commit-Position: refs/heads/master@{#597512}
Former-commit-id: e1fd5aaf5977ad5f1bd6a41cb3310e371c16fd7a